Update peanut-squid, pizza and sanji-rice html files to completion
Added pictures and gifs to appropriate files. Implemented
ordered and unordered list to the webpage.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Homepage</title>
-    </head>
-    <body></body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Homepage</title>
+  </head>
+  <body>
+    <ol>
+      <li><a href="#">Homepage</a></li>
+      <li><a href="recipes/peanut-squid.html">Peanut Squid</a></li>
+      <li><a href="recipes/pizza.html">Pizza</a></li>
+      <li><a href="recipes/sanji-rice.html">Sanji's Rice</a></li>
+    </ol>
+  </body>
 </html>
