--- a/recipes/peanut-squid.html
+++ b/recipes/peanut-squid.html
@@ -6,5 +6,30 @@
   </head>
   <body>
     <h1>Peanut Squid from Food Wars</h1>
+    <ol>
+      <li><a href="../index.html">Homepage</a></li>
+      <li><a href="#">Peanut Squid</a></li>
+      <li><a href="pizza.html">Pizza</a></li>
+      <li><a href="sanji-rice">Sanji's Rice</a></li>
+    </ol>
+    <img
+      src="https://static.wikia.nocookie.net/shokugekinosoma/images/f/fd/Grilled_Squid_Tentacles_Dressed_in_Peanut_Butter_%28anime%29.png/revision/latest?cb=20180417093917"
+      alt="Grilled Squid drenched in peanut butter"
+    />
+    <p>This food is from the anime Food Wars</p>
+    <p>The main character uses this dish to disgust other people</p>
+    <p>As a viewer it is hilarious when seeing their reactions</p>
+    <p>Ingredients needed to make this dish:</p>
+    <ul>
+      <li>Grilled Squid</li>
+      <li>Peanut Butter</li>
+    </ul>
+    <p>Procedures needed to make this dish:</p>
+    <ol>
+      <li>Grill a squid</li>
+      <li>Apply Peanut butter to it</li>
+      <li>Feed to friends</li>
+      <li>Enjoy amusement</li>
+    </ol>
   </body>
 </html>
