--- a/recipes/sanji-rice.html
+++ b/recipes/sanji-rice.html
@@ -6,5 +6,35 @@
   </head>
   <body>
     <h1>Sanji's Rice from One Piece</h1>
+    <ol>
+      <li><a href="../index.html">Homepage</a></li>
+      <li><a href="peanut-squid.html">Peanut Squid</a></li>
+      <li><a href="pizza.html">Pizza</a></li>
+      <li><a href="#">Sanji's Rice</a></li>
+    </ol>
+    <img
+      src="https://c.tenor.com/RyRSYTTNxOgAAAAC/vinsmoke-sanji-cooking.gif"
+      alt="A gif of Sanji cooking a fish"
+      />
+    <p>This recipe is taken directly from the anime One Piece</p>
+    <p>
+      Sanji, a cook sees a pirate starving to death. However this pirate has no
+      money
+    </p>
+    <p>Sanji as a result cooks up a seafood risotto without charging</p>
+    <p>Sanji knows firsthand how deadly hunger is</p>
+    <h2>Ingredients:</h2>
+    <ul>
+      <li>Rice</li>
+      <li>Octopous</li>
+      <li>Egg</li>
+      <li>Rice</li>
+      <li>Vegetables</li>
+      <li>Oil</li>
+    </ul>
+    <h2>Steps: </h2>
+    <ol>
+      <li>Honestly I don't know</li>
+    </ol>
   </body>
 </html>
