--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,5 +6,33 @@
   </head>
   <body>
     <h1>Cheese Pizza</h1>
+    <ol>
+      <li><a href="../index.html">Homepage</a></li>
+      <li><a href="peanut-squid.html">Peanut Squid</a></li>
+      <li><a href="#">Pizza</a></li>
+      <li><a href="sanji-rice.html">Sanji's Rice</a></li>
+    </ol>
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Pizza_%281%29.jpg/1200px-Pizza_%281%29.jpg"
+      alt="A cheese pizza set upon a dining table"
+      />
+    <h2>Description</h2>
+    <p>This is a cheese pizza</p>
+    <p>It is cheesy, and good</p>
+    <ul>
+      <li>Pizza Dough</li>
+      <li>Tomatoe Sauce</li>
+      <li>Basil</li>
+      <li>Cheese</li>
+      <li>Olive Oil</li>
+    </ul>
+    <h2>Steps needed:</h2>
+    <ol>
+      <li>Get pizza dough</li>
+      <li>Put tomatoe pate on it</li>
+      <li>Put cheese</li>
+      <li>Put basil</li>
+      <li>Put in pizza oven</li>
+    </ol>
   </body>
 </html>
